Add unit and integration tests for the library.